chore(deps): Jackson 3